# tgboy

./: .gitignore  README.md  tokens.txt
mainservice/: CMakeLists.txt  Makefile  build.sh  mainservice
mainservice/src/: main.cpp
mainservice/src/controller/: controller.cpp  controller.h
mainservice/src/repository/user/: user.h  userRepository.cpp  userRepository.h
mainservice/src/service/: service.cpp  service.h
tgservice/: CMakeLists.txt  build.sh  tgservice
tgservice/src/: main.cpp
tgservice/src/controller/: controller.cpp  controller.h
tgservice/src/repository/user/: user.h
tgservice/src/service/: service.cpp  service.h
